# transfer_edition_distance

./: .gitignore  .gitmodules  Cargo.toml  README.md  network_visualizer.py  pyproject.toml  requirements.txt  visualizer.ipynb
experiments/: .gitignore  README.md  benchmark_results.csv  example_network.gr  network_visualizer.py  run_distance_computations.py
experiments/.old/: Untitled.ipynb
experiments/alitzel_data/: ARG_related_KOs.csv  fitch_network.csv  genesis_network.csv  interphylum_matrix_chunk_0.pkl  interphylum_matrix_chunk_1.pkl  interphylum_matrix_chunk_2.pkl  network_generation.py  sankoff_network.csv  species_tree.phy
experiments/asymmetree_experiment/: .gitignore  Makefile  README.md  Untitled.ipynb  asymmetree_json_to_gr.py  asymmetree_simulation.py  combining_species_gene_trees_into_network.py  combining_species_gene_trees_into_unordered_network.py  compute_distances.sh  print_gne_trees.ipynb  produce_ranger_dtl_input.py  ranger_dtl_reconstruct_network.py  results_10_10_10  results_20_10_10  results_50_10_10  results_nleaves50_nruns100_nreconcruns1_T10  results_nleaves50_nruns100_nreconcruns1_T20  results_nleaves50_nruns100_nreconcruns1_T30  results_nleaves50_nruns100_nreconcruns1_T40  results_nleaves50_nruns100_nreconcruns1_T50  results_nleaves50_nruns100_nreconcruns1_T60  test_output  (+21 more)
level_k_lgt_generator/: evolution_model.ipynb  evolution_model.py
src/: lib.rs
ted_module/: Cargo.toml
tests/: K00135_fitch.gr  small_network1.gr  small_network2.gr  small_weighted_network1.wgr  small_weighted_network2.wgr  test_distance_computation.py
(+423 files in other folders)
