[package]
name = "dlgt_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlgt_module"
crate-type = ["cdylib","rlib"]

[[bin]]
name = "dlgt"

[dependencies]
pyo3 = "0.25.0"
clap = {version = "4.0", features = ["derive"]}
